# wanteat-be

./: pyproject.toml
app/: config.py  database.py  main.py
app/api/router/: restaurants.py  users.py
app/db/models/: permissions.py  users.py
app/db/models/restaurants/: restaurants_models.py
